@@ -144,6 +144,22 @@ typedef struct {
 /* ===================================================================== */
 /* Utility functions. */
 
+/* Refuse regular I/O if there's data in the iteration-buffer.
+ * Mixing them would cause data to arrive out of order, as the read*
+ * methods don't use the iteration buffer. */
+static int
+check_iterbuffered(BZ2FileObject *f)
+{
+    if (f->f_buf != NULL &&
+        (f->f_bufend - f->f_bufptr) > 0 &&
+        f->f_buf[0] != '\0') {
+        PyErr_SetString(PyExc_ValueError,
+            "Mixing iteration and read methods would lose data");
+        return -1;
+    }
+    return 0;
+}
+
 static int
 Util_CatchBZ2Error(int bzerror)
 {
@@ -527,6 +543,10 @@ BZ2File_read(BZ2FileObject *self, PyObject *args)
             goto cleanup;
     }
 
+    /* refuse to mix with f.next() */
+    if (check_iterbuffered(self))
+        goto cleanup;
+
     if (bytesrequested < 0)
         buffersize = Util_NewBufferSize((size_t)0);
     else
@@ -612,6 +632,10 @@ BZ2File_readline(BZ2FileObject *self, PyObject *args)
             goto cleanup;
     }
 
+    /* refuse to mix with f.next() */
+    if (check_iterbuffered(self))
+        goto cleanup;
+
     if (sizehint == 0)
         ret = PyString_FromString("");
     else
@@ -668,6 +692,10 @@ BZ2File_readlines(BZ2FileObject *self, PyObject *args)
                             "file is not ready for reading");
             goto cleanup;
     }
+
+    /* refuse to mix with f.next() */
+    if (check_iterbuffered(self))
+        goto cleanup;
 
     if ((list = PyList_New(0)) == NULL)
         goto cleanup;
